Handle count favorite